# ref-validator

./: .env.example  .gitignore  README.md  pyproject.toml
src/ref_validator/: __init__.py  cli.py  config.py  errors.py  output.py  pipeline.py  progress.py
src/ref_validator/apis/: __init__.py  arxiv.py  base.py  crossref.py  doi_resolver.py  openalex.py  semantic_scholar.py  unpaywall.py
src/ref_validator/extraction/: __init__.py  citations.py  pdf.py
src/ref_validator/llm/: client.py  prompts.py
src/ref_validator/models/: __init__.py  citation.py  cost.py  report.py  verification.py
src/ref_validator/verification/: __init__.py  claims.py  existence.py  metadata.py
tests/: conftest.py  test_cli.py  test_pipeline.py
tests/test_apis/: test_arxiv.py  test_crossref.py  test_doi_resolver.py
tests/test_extraction/: test_citations.py
tests/test_verification/: test_claims.py  test_existence.py  test_metadata.py
