[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ref-validator"
version = "0.1.0"
description = "Validate academic references in papers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pymupdf>=1.24.0",
    "rich>=13.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "coverage>=7.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.scripts]
ref-validator = "ref_validator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ref_validator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
